# leanexe

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPING.md  LeanExe.lean  Main.lean  README.md  agenda.md  demo.md  devnotes.md  lake-manifest.json  lakefile.lean  leanexe-talos-assoc-list.md  leanexe-talos.md  manual.md  plan-notes.md  plan.md  spec.md  status.md  strings.md  summary.md  typeclasses.md  verifying.md
LeanExe/: AsciiString.lean  CLI.lean  Core.lean  Runtime.lean
docs/: README.md  demo.md  manual.md  plan-notes.md  spec.md  status.md  strings.md  summary.md  verifying.md
host/: validate_runner.js
proofs/talos-gcd/rust/: Cargo.toml
proofs/talos-gcd/rust/append_bang/: Cargo.toml
proofs/talos-gcd/rust/box_free/: Cargo.toml
proofs/talos-gcd/rust/clob_cancel/: Cargo.toml
proofs/talos-gcd/rust/clob_depth/: Cargo.toml
proofs/talos-gcd/rust/clob_find_best/: Cargo.toml
proofs/talos-gcd/rust/clob_limit/: Cargo.toml
proofs/talos-gcd/rust/clob_market/: Cargo.toml
proofs/talos-gcd/rust/clob_match_fuel/: Cargo.toml
proofs/talos-gcd/rust/clob_post_only/: Cargo.toml
proofs/talos-gcd/rust/leb_u32/: Cargo.toml
proofs/talos-gcd/rust/order_book/: Cargo.toml
proofs/talos-gcd/rust/pair_free/: Cargo.toml
proofs/talos-gcd/rust/push_twice/: Cargo.toml
proofs/talos-gcd/rust/shared_pair/: Cargo.toml
proofs/talos-gcd/rust/validate/: Cargo.toml
test/: asciistring.js  bytearray_alloc.js  cli_errors.js  core_correctness.js  fuzz_validate.js  intmap.js  json_double.js  matched_values.js  no_js_wasm_execution.js  ownership_report.js  refcount.js  run_all.js  (+5 more)
(+431 files in other folders)
